<resources>
    <string name="app_name">VACCINO_X</string>
    <string name="heading_one">Stay Safe With Your Family </string>
    <string name="heading_two">Save The World</string>
    <string name="heading_three">Get Vaccine</string>
    <string name="heading_fourth">Keep 1m Distance </string>

    //Description
    <string name="desc_one">Grow your Business By Accepting Card Payments with The New Card Reader</string>
    <string name="desc_two">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="desc_three">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="desc_fourth">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="logo_Reg">Vaccino-X</string>
    <string name="tittle_login">Login</string>
    <string name="userName">User Name</string>
    <string name="prompt_password">Password</string>
    <string name="btnLogin">Login</string>
    <string name="rememberPass">Remember Password</string>
    <string name="signUpText">Sign Up</string>
    <string name="login_here">Login Here</string>
    <string name="register_here">Register Here</string>
    <string name="register">Register</string>
    <string name="home">Home</string>
    <string name="add_new_center">Add New Center</string>
    <string name="corona_updates">Corona Updates</string>
    <string name="all_centers">All Centers</string>
    <string name="my_account">My Account</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="share_us">Share Us</string>
    <string name="review_rate">Review Rate</string>
    <string name="vacc">VACCINO-X</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="vac_add">VACCINO-X - ADMIN</string>
    <string name="vaccino_x">VACCINO-X</string>
    <string name="add_new_vaccine_center">ADD NEW VACCINE CENTER</string>
    <string name="todo">TODO</string>
    <string name="center_id">Center ID</string>
    <string name="center_name">Center Name</string>
    <string name="available_doctor">Available Doctor</string>
    <string name="working_hours">Working Hours</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="add_center">Add Center</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="user_name">User Name</string>
    <string name="vaccinox">VACCINOX</string>
    <string name="add_center2">Center</string>

    //Symptoms Strings
    <string name="add_new_symptom">ADD NEW SYMPTOMS</string>
    <string name="inputView_symptom_name">SYMPTOM NAME</string>
    <string name="inputView_description">DESCRIPTION</string>
    <string name="inputView_rarity">RARITY</string>
    <string name="inputView_effected_hours">EFFECTED HOURS</string>
    <string name="inputView_percentage">PERCENTAGE AMONG</string>
    <string name="inputView_url">URL</string>
    <string name="inputView_addBtn">Add</string>
    <string name="symptomUpdate_btn">Update</string>
    <string name="update_symptoms">UPDATE SYMPTOMS</string>
    <string name="editBtn">Edit</string>
    <string name="deleteBtn">Delete</string>
    <string name="head_symptoms">Previously Added Symptoms</string>



    <string-array name="does">
        <item>First Does</item>
        <item>Second Does</item>
    </string-array>

</resources>