<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddSymptoms">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_bold"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/vacc"
                android:textColor="@color/purple_500"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_light"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/add_new_symptom"
                android:textColor="@color/purple_500"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/symptom_vec"
                tools:ignore="ImageContrastCheck" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_symptom_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/inputView_symptom_name"
                app:counterTextColor="@color/purple_500"
                android:layout_gravity="center"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_symptom_nameEdit"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/purple_500"
                    android:textSize="15sp"
                    android:fontFamily="@font/poppins_light"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_description"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/inputView_description"
                app:counterTextColor="@color/purple_500"
                android:layout_gravity="center"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_descriptionEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/purple_500"
                    android:textSize="15sp"

                    android:fontFamily="@font/poppins_light"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_rarity"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/inputView_rarity"
                android:layout_gravity="center"
                app:counterTextColor="@color/purple_500">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_rarityEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/purple_500"
                    android:textSize="15sp"

                    android:fontFamily="@font/poppins_light"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_effected_hours"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/inputView_effected_hours"
                android:layout_gravity="center"
                app:counterTextColor="@color/purple_500">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_effected_hoursEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/purple_500"
                    android:textSize="15sp"
                    android:fontFamily="@font/poppins_light"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_percentage"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/inputView_percentage"
                android:layout_gravity="center"
                app:counterTextColor="@color/purple_500">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_percentageEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/purple_500"
                    android:textSize="15sp"
                    android:fontFamily="@font/poppins_light"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_url"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/inputView_url"
                android:layout_gravity="center"
                app:counterTextColor="@color/purple_500">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_urlEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/purple_500"
                    android:textSize="15sp"
                    android:fontFamily="@font/poppins_light"/>
            </com.google.android.material.textfield.TextInputLayout>

            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/addBtn"
                style="@style/loginButton"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:fontFamily="@font/poppins_light"
                android:onClick="onAddClick"
                android:text="@string/inputView_addBtn"
                android:backgroundTint="@color/purple_500"
                android:textSize="15sp"
                android:textAllCaps="false"
                />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>