<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/update_symptoms"
        android:background="@color/purple_500"
        android:textSize="25sp"
        android:gravity="center"
        android:textColor="@color/white"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/update_symptom_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/inputView_symptom_name"
                android:layout_gravity="center"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/update_symptom_nameEdit"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/purple_500"
                    android:textSize="15sp"
                    android:fontFamily="@font/poppins_light"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/update_description"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/inputView_description"
                android:layout_gravity="center"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/update_descriptionEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/purple_500"
                    android:textSize="15sp"

                    android:fontFamily="@font/poppins_light"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/update_rarity"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/inputView_rarity"
                android:layout_gravity="center"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/update_rarityEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/purple_500"
                    android:textSize="15sp"

                    android:fontFamily="@font/poppins_light"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/update_effected_hours"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/inputView_effected_hours"
                android:layout_gravity="center"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/update_effected_hoursEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/purple_500"
                    android:textSize="15sp"
                    android:fontFamily="@font/poppins_light"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/update_percentage"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/inputView_percentage"
                android:layout_gravity="center"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/update_percentageEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/purple_500"
                    android:textSize="15sp"
                    android:fontFamily="@font/poppins_light"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/update_url"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/inputView_url"
                android:layout_gravity="center"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/update_urlEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/purple_500"
                    android:textSize="15sp"
                    android:fontFamily="@font/poppins_light"/>
            </com.google.android.material.textfield.TextInputLayout>

            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/symp_updateBtn"
                style="@style/loginButton"
                android:layout_width="240dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="40dp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/symptomUpdate_btn"
                android:textSize="15sp"
                android:textAllCaps="false"/>
        </LinearLayout>
    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>